<resources>
    <string name="app_name">TellMe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tab_title_1">ask</string>
    <string name="tab_title_2">practice</string>
    <string name="translate">get</string>
    <string name="save">save</string>
    <string name="speak">speak</string>
    <string name="clear">clear</string>
    <string name="listen">listen</string>
    <string name="quiztest">quiz</string>
    <string name="speaktest">speak</string>
    <string name="listentest">listen</string>
    <string name="showPastBoard">clipboard</string>
    <string name="voiceregognition">Voice Regonition running </string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="nd_tv_title_collect">Collect</string>
    <string name="nd_tv_title_practice">Practice</string>


</resources>
